# memos-worker

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
migrations/: 0001_initial.sql  0002_webhook_delivery.sql  0003_audit_log.sql  0004_memo_event.sql  0005_memo_list_indexes.sql  0006_personal_cleanup.sql  0007_security_and_indexes.sql  0008_relation_rebuild_tasks.sql  0009_relation_rebuild_token_index.sql  0010_relation_rebuild_failures.sql
scripts/: build-worker.sh  e2e-smoke.js
src/: access_tokens.rs  ai_settings.rs  assets.rs  attachment_cleanup.rs  attachment_support.rs  attachments.rs  audit_logs.rs  auth.rs  auth.ts  backup_payload.rs  backup_restore.rs  backups.rs  calendar.rs  comments.rs  cookies.rs  crypto.rs  data_endpoints.rs  domain.rs  filter.ts  http_support.rs  inbox.rs  index.ts  integrations.rs  lib.rs  memo_bulk.rs  memo_crud.rs  memo_events.rs  memo_index.rs  middleware.ts  migration.rs  migration_audit.rs  models.rs  relation_rebuild.rs  relation_suggestions.rs  relations.rs  route_authed.rs  route_public.rs  router.ts  routes.rs  rss.ts  (+21 more)
src/models/: admin.rs  attachment.rs  backup.rs  error.rs  memo.rs  migration.rs  user.rs
src/services/: aiRelations.ts  aiSettings.ts  attachment.ts  audit.ts  backup.ts  inbox.ts  memo.ts  migration.ts  share.ts  social.ts  tags.ts  timeline.ts  user.ts  webhook.ts
test/: core.test.ts  e2e-smoke.test.js  web-helpers.test.ts
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: _headers  sw.js  (+2 more)
(+75 files in other folders)
