[package]
name = "memos-worker-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }
futures-channel = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
js-sys = "0.3"
pbkdf2 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
worker = { version = "0.8.3", features = ["d1"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
